--- a/Direction.html
+++ b/Direction.html
@@ -8,13 +8,9 @@ sc<!DOCTYPE html>
     <title>Next Decade of SN-Cosmo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap core CSS -->
-    <link href="Extra_tools/bootstrap-3.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <!-- Custom styles for this template -->
-    <link href="Extra_tools/css_template/starter-template.css"rel="stylesheet">
 
     <! ------------ Google Maps --------------- >
-    <script src="https://Maps.googleapis.com/maps/api/js"></script>
+    <script src="http://Maps.googleapis.com/maps/api/js"></script>
     <script>
     function initialize() {
     var mapProp = {
