--- a/Direction.html
+++ b/Direction.html
@@ -10,7 +10,8 @@ sc<!DOCTYPE html>
     <!-- Bootstrap core CSS -->
 
     <! ------------ Google Maps --------------- >
-    <script src="http://Maps.googleapis.com/maps/api/js"></script>
+  <! ------------ Google Maps --------------- >
+    <script src="https://Maps.googleapis.com/maps/api/js"></script>
     <script>
     function initialize() {
     var mapProp = {
@@ -21,7 +22,7 @@ sc<!DOCTYPE html>
     var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);}
     google.maps.event.addDomListener(window, 'load', initialize);
     </script>
-    
+
   </head>
 
   <body>
