--- a/Direction.html
+++ b/Direction.html
@@ -14,7 +14,7 @@
     <link href="Extra_tools/css_template/starter-template.css"rel="stylesheet">
 
     <! ------------ Google Maps --------------- >
-    <script src="https://Maps.googleapis.com/maps/api/js"></script>
+    <script src="https://Maps.googleapis.com/maps/api/js?key=AIzaSyBczLWn2C43zqkqMdFwqx32eW5of7udoyI"></script>
     <script>
     function initialize() {
     var mapProp = {
