--- a/Participants.html
+++ b/Participants.html
@@ -66,7 +66,7 @@
 	<div class="col-lg-8 col-lg-pull-3 col-md-8 col-md-pull-4
 	  col-sm-12 col-xs-12
 	starter-template myContainer">
-	  <h1>List of Participant</h1>
+	  <h1>List of Participants</h1>
 	<div class="description">
 	  <p>
 	  <b>Sweden</b><br>
@@ -99,7 +99,7 @@
 	  Emmanuel Gangler (Clermont)<br>
 	  Yannick Copin (Lyon)<br>
 
-	  <b>No-US, Berkeley</b><br>
+	  <b>No-UE, Berkeley</b><br>
 	  Saul Perlmutter (Berkeley)<br>
 	  Greg Aldering (Berkeley)<br>
 	  Alex Kim (Berkeley)<br>
