--- a/Schedule.html
+++ b/Schedule.html
@@ -136,9 +136,9 @@ src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></scrip
 	       <h2> Friday the 15th</h2>
 	       <br>
 	       <p>
-	       The Friday will be structured discussion of about
+	       The Friday will be structured discussions of about
 	       30min to 1h each. Sessions will start by 2/5 min
-	       Introduction presentations.</p>
+	       introductions.</p>
 	       
 	       <h3>8h45-9h00 Introduction </h3>
 	       Marek's introduction
